--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,3 +22,7 @@ jobs:
     steps:
       - name: "Hola mudno"
         run: echo 'hola mundo'
+      - name: "Date"
+        run: date
+      - name: "Dir"
+        run: ls -la
